[tool.poetry]
name = "billor"
version = "0.1.0"
description = "financial bills from official to dedicated format"
authors = ["alex4814 <alex4814.fu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beancount = "^2.3.4"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
